--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Assessment 3</string>
     <string name="profil">Profil</string>
+    <string name="tutup">Tutup</string>
 </resources>
